--- a/VRChat/73/1032673.html
+++ b/VRChat/73/1032673.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "JY44KV+kPkypLBKINWZNWm1v1+zzq/58TcJWppvPvZk="></script>
+    "0N31t4GfrL7Xp67fZEptaW8rA6YBj7pEQrbC7VaPJRc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat向けアクセサリー　指輪","description":"ずっと好きだったあの子、いつも一緒に居てくれる人に。\n\n自分のお守りに。\n\n自分の思いを形にしてみてはいかがですか？\n\n付ける方によってそれぞれいろいろな思いなどが込められるアイテムを作りたくて制作しました。\n\n　内容物\n\nRing_set.UnityPackage\nreadme.txt\n指輪のはめる場所豆知識.txt\n\n今後新規モデルの追加、現行モデルのUV展開やテクスチャ追加など使用されている方の用途に応じて不定期ではありますがアップデートを実施します。\n\nこんな指輪の形が欲しい！\n\n指輪じゃなくてこんなペアルックアイテムがあるんだけど！\n\nなど、アイディアをTwitterにて募集しておりますのでご意見等、頂ければと思います。\n\n募集して制作したペアルックアイテムに関しては、今後すべて無料で配布していく予定です。\n\n\n【※注意事項】\n\n・ペアリングとして使用させる方のみ、相方へのモデル受け渡しが可能です。\n・このファイルを使用して発生したいかなるトラブルにも責任を負いかねます\n・過度なエロ、グロ系への使用は禁止です。\n・政治的利用、宗教的利用、誹謗中傷目的の作品への使用は禁止です。\n・改変等はオッケーです！\n・作者を偽ること、素モデルのままの再配布は禁止です。\n・良識の範囲でのご使用をお願い致します。\n・予告なく規約変更、配布停止、使用禁止にする事があります。\n\n制作者:をたぱち\nhttps://twitter.com/_wtpc ご不明な点、バグなどございましたらご連絡いただけますと幸いです。","url":"https://booth.pm/ja/items/1032673","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"0"},"image":"https://booth.pximg.net/c/620x620/a1e47a5c-c994-4f91-9f96-57dc100ca505/i/1032673/ce87ee12-60b2-45f0-a1fe-e22acdc2d8b4_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="JY44KV+kPkypLBKINWZNWm1v1+zzq/58TcJWppvPvZk="></script>
+    nonce="0N31t4GfrL7Xp67fZEptaW8rA6YBj7pEQrbC7VaPJRc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -169,7 +169,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      5731
+                                      5734
                                     </div>
                                   </div></a><a class=
                                   "remove-from-wish-list no-underline !text-current"
@@ -185,7 +185,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      5731
+                                      5734
                                     </div>
                                   </div></a>
                                 </div>
@@ -451,9 +451,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
