--- a/VRChat/57/1032257.html
+++ b/VRChat/57/1032257.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "o3x5CLacmUqudmRwKOi4l5tSaDK0GKE+aj6aJkHiJaA="></script>
+    "ttQ+b7JYJy1ZZJlDOAs/1qWdzEnRnyf76KAtICtTRyA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRchat想定】MCF Sci-Fi携帯端末I48","description":"【製品内容】\n・UnityPackage\n・利用規約\n・UVマップ\n\n【説明】\nなんかカッコいい。そうI48ならね。\n\nシンプルにスマホ。全五色。\n中にUVマップを入れてます。画面部分はエミッションで表示してますので、お好きなように改編してください。自分だけのスマホを作ろう！\nSSは #MCF_VRC をつけてツイートしてくれると私が喜びます。\n\nMCF Sci-Fi携帯端末I48:148\n\n\n\n【免責事項】\n当モデルを使用した際、使用者側にいかなる不利益が発生した場合でも当方は一切責任を負いません。\n\n【禁止事項】\n・再配布（ゲームに組み込む・VRCのペデスタル等は許可）\n・政治的、差別的な用途への利用、又は過去にそのような用途に扱われた経歴のあるキャラクターへの利用","url":"https://booth.pm/ja/items/1032257","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/41721053-8f32-4b87-9b48-5fda7552cf1a/i/1032257/c637ee09-6df3-45bc-8409-6733f1ba68dc_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="o3x5CLacmUqudmRwKOi4l5tSaDK0GKE+aj6aJkHiJaA="></script>
+    nonce="ttQ+b7JYJy1ZZJlDOAs/1qWdzEnRnyf76KAtICtTRyA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -394,9 +394,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
