--- a/VRChat/44/1031644.html
+++ b/VRChat/44/1031644.html
@@ -76,7 +76,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "n0VOqAv94it068WLrKsivJNuRKrTp8YNV77E2X+b+Uw="></script>
+    "3ujhd0u/j+AedYdJzPEbCL00ugatcqFbrpJaC1DwL+w="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"槍 1.0.0","description":"\nポリゴン:4810\n\n\n禁止事項：再配布","url":"https://booth.pm/ja/items/1031644","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/fbe78718-f68f-42ee-af12-21af884bd699/i/1031644/202e2ded-54af-4875-94dd-1797f12cc611_base_resized.jpg"}
     </script>
@@ -90,7 +90,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="n0VOqAv94it068WLrKsivJNuRKrTp8YNV77E2X+b+Uw="></script>
+    nonce="3ujhd0u/j+AedYdJzPEbCL00ugatcqFbrpJaC1DwL+w="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -396,9 +396,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
