--- a/VRChat/47/1031447.html
+++ b/VRChat/47/1031447.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "6XFqXbPZZ7341KtEMJAAz3iCgMRlkxrcpR9I7cogryc="></script>
+    "arc98lqnepdpBHCF8YmHXV2xOjhgX5mJtx0/2EQ+IcM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"3Dモデル　mk5メカニカルテール","description":"□mk5・メカニカルテール\n\n□メカニカルな尻尾の3Dモデルです。\n3324△ポリゴン。\n自動でくねらせるアニメーション付き、Legacyアニメーション不使用環境に対応しました。\nanimatorのみでループする自動アニメーションを実装しています。\n\n\n□内容\n・mk5tail.fbx　本体\n\n・mk5tail.unitypackage\n\n・texフォルダ　各種テクスチャ・マップ\n\n・readme.txt これ\n\n・0x.png　サンプル画像\n\n・tail_animation_sumple.mp4　自動アニメーションのサンプル動画\n\n\n□使用方法\n\nfbxデータやunitypackageを各種ソフトにインポートしてご利用下さい。\n\n\n□自動アニメーションについて\n\nunitypackageインポート後に生成されるmk5tailフォルダ内にある「mk5tailpac」という名称のprefabには\n自動アニメーションが適用済みとなります。\nそのままアバターの階層内に設置して頂ければ作動します。\n\n付属のmp4ファイルが自動アニメーションのサンプルになります。（動画のものとはシェーダー等が異なります）\n\n\n□利用規約\n\n配布行為そのものを目的とした再配布を禁じます。\n(自作のモデルの一部に組み込む等の場合は可)\n\nVRchat、改変、動画、同人、移植、商用などにどうぞ。\n\n\n\n\n\n□連絡先\n\nTwitter： @mabo_to_fu\nメール： stanag2324@gmail.com\n\n\n更新履歴：\n\n2021/05/05　含まれるファイルに問題があった為更新","url":"https://booth.pm/ja/items/1031447","offers":{"priceCurrency":"JPY","@type":"Offer","price":"400"},"image":"https://booth.pximg.net/c/620x620/dd09d57d-ff0e-4d48-b34c-08c891168638/i/1031447/822d4396-47ae-4cd4-917b-c667c96e1c31_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="6XFqXbPZZ7341KtEMJAAz3iCgMRlkxrcpR9I7cogryc="></script>
+    nonce="arc98lqnepdpBHCF8YmHXV2xOjhgX5mJtx0/2EQ+IcM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -419,9 +419,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
